--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ after_success:
   - docker build -t henrymcbean/multi-nginx ./nginx
   - docker build -t henrymcbean/multi-server ./server
   - docker build -t henrymcbean/multi-worker ./worker
-
   # Log into the docker CLI
-
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
+  - docker push henrymcbean/multi-client
+  - docker push henrymcbean/multi-nginx
+  - docker push henrymcbean/multi-server
+  - docker push henrymcbean/multi-worker
